test/src/e2e_vm_tests/test_programs/should_fail/abi_pub_fn_method/src/main.sw
contract;

abi MyContract {} {
    pub fn f() -> bool {
        false
    }
}